--- a/index.html
+++ b/index.html
@@ -37,6 +37,5 @@
 
 </script>
 
-<script src="chris429.com_files/jquery.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </html>
